--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "migration": "knex migrate:latest && knex seed:run"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "express-validator": "^6.12.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.95.6",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
+    "objection": "^2.2.15",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "sequelize": "^6.5.0"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "sequelize-cli": "^6.2.0"
+    "nodemon": "^2.0.7"
   }
 }
