--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "knex": "^0.95.6",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
-    "objection": "^2.2.15",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "objection": "^2.2.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
